@@ -53,12 +53,10 @@ Even small corrections to typos are very welcome :)
 #### Backend start
 
 1. Requires `maven3+`, `java17` and `lombok` environments
-
 2. (Optional) Modify the configuration file: `manager/src/main/resources/application.yml`
-
 3. Execute under the project root directory: `mvn clean install -DskipTests`
-
-4. Start `springboot manager` service: `manager/src/main/java/org/apache/hertzbeat/hertzbeat-manager/Manager.java`
+4. Add VM Options: `--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED`
+5. Start `springboot manager` service: `manager/src/main/java/org/apache/hertzbeat/hertzbeat-manager/Manager.java`
 
 #### Frontend start
 
@@ -70,11 +68,9 @@ Even small corrections to typos are very welcome :)
 
 4. Install Dependencies: `yarn install` or `yarn install --registry=https://registry.npmmirror.com` in `web-app`
 
-5. Install angular-cli globally: `yarn global add @angular/cli@15` or `yarn global add @angular/cli@15 --registry=https://registry.npmmirror.com`
+5. After the local backend is started, start the local frontend in the web-app directory: `yarn start`
 
-6. After the local backend is started, start the local frontend in the web-app directory: `ng serve --open`
-
-7. Browser access to localhost:4200 to start, default account/password is *admin/hertzbeat*
+6. Browser access to localhost:4200 to start, default account/password is *admin/hertzbeat*
 
 ### Find tasks
 
